Added link about certificate of marital status

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_british/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_british/_opposite_sex.govspeak.erb
@@ -4,6 +4,8 @@ Contact the [Embassy of Denmark](/government/publications/foreign-embassies-in-t
 
 ##What you need to do
 
+You need a [certificate of marital status from the State Administration](https://www.statsforvaltningen.dk/site.aspx?p=9555). It's valid for 4 months. You'll have to pay a fee.
+
 You should apply for a document showing that you’re free to marry from the General Register Office, National Records of Scotland or nidirect.
 
 If you can’t apply for one of these documents you can get a certificate of no impediment (CNI) from the British Embassy or UK registrar.
