Changed civil partnership to same sex marriage

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/_title.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/_title.govspeak.erb
@@ -1,5 +1,5 @@
 <% if calculator.partner_is_same_sex? %>
-    Civil partnership in Denmark
+    Same-sex marriage in Denmark
 <% else %>
     Marriage in Denmark
 <% end %>
