--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_other/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_other/_same_sex.govspeak.erb
@@ -1,14 +1,12 @@
-Same-sex relationships in Denmark that are recognised as civil partnerships under British law are known as:
-
-- marriage
-- ’registreret partnerskab’ (’registered partnership’)
-- ‘nalunaarsukkamik inooqatigiinneq’ (in Greenland)
+You can get married at a town hall or a Church of Denmark church.
 
 Contact the [Embassy of Denmark](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local marriage laws, including what documents you’ll need.
 
 ^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Denmark](/foreign-travel-advice/denmark) before making any plans.
 
 ##What you need to do
+
+You need a [certificate of marital status from the State Administration](https://www.statsforvaltningen.dk/site.aspx?p=9555). It's valid for 4 months. You'll have to pay a fee.
 
 You should apply for a document showing that you’re free to marry from the General Register Office, National Records of Scotland or nidirect.
 
