--- a/lib/smart_answer_flows/minimum-wage-calculator-employers/questions/how_much_were_you_paid_during_pay_period.govspeak.erb
+++ b/lib/smart_answer_flows/minimum-wage-calculator-employers/questions/how_much_were_you_paid_during_pay_period.govspeak.erb
@@ -3,7 +3,9 @@
 <% end %>
 
 <% content_for :hint do %>
-  Don’t include payments for overtime or anything extra to their pay, eg money for clothes or goods.
+If you have not reimbursed the worker for something they bought for work (for example tools or a uniform) then you need to deduct the cost from amount they were paid. 
+
+Do not include payments for overtime.
 <% end %>
 
 <% content_for :suffix_label do %>
