--- a/lib/smart_answer_flows/minimum-wage-calculator-employers/questions/how_many_hours_do_you_work.govspeak.erb
+++ b/lib/smart_answer_flows/minimum-wage-calculator-employers/questions/how_many_hours_do_you_work.govspeak.erb
@@ -3,14 +3,14 @@
 <% end %>
 
 <% content_for :hint do %>
-This includes: 
+This includes:
 
-+  any time your employee is at work and needs to be available for work 
-+  any time spent travelling in connection with work (for example, travelling to a training course or between work locations)
++ any time your employee is at work and needs to be available for work
++ any time spent travelling in connection with work (for example, travelling to a training course or between work locations)
 
-If you have not reimbursed the worker for something they bought for work (for example tools or a uniform) then you need to deduct the cost from amount they were paid. 
+If you have not reimbursed the worker for something they bought for work (for example tools or a uniform) then you need to deduct the cost from amount they were paid.
 
-^Do not include overtime or time taken to travel to their normal workplace.
+^Do not include overtime or time taken to travel to their normal workplace.^
 <% end %>
 
 <% content_for :suffix_label do %>
