--- a/lib/smart_answer_flows/am-i-getting-minimum-wage/questions/how_many_hours_do_you_work.govspeak.erb
+++ b/lib/smart_answer_flows/am-i-getting-minimum-wage/questions/how_many_hours_do_you_work.govspeak.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :hint do %>
-  Don’t include any overtime or other extra hours you might work.
+This includes any time you’re at work and need to be available for work or any time spent travelling in connection with work (for example, travelling to a training course or between work locations). Do not include overtime or time taken to travel to your normal workplace.
 
 <% end %>
 
