--- a/lib/smart_answer_flows/am-i-getting-minimum-wage/questions/how_many_hours_did_you_work.govspeak.erb
+++ b/lib/smart_answer_flows/am-i-getting-minimum-wage/questions/how_many_hours_did_you_work.govspeak.erb
@@ -3,8 +3,7 @@
 <% end %>
 
 <% content_for :hint do %>
-  Don’t include any overtime or other extra hours you worked.
-
+This includes any time you were at work and needed to be available for work or any time spent travelling in connection with work (for example, travelling to a training course or between work locations). Do not include overtime or time taken to travel to your normal workplace.
 <% end %>
 
 <% content_for :suffix_label do %>
