--- a/lib/smart_answer_flows/am-i-getting-minimum-wage/questions/how_much_were_you_paid_during_pay_period.govspeak.erb
+++ b/lib/smart_answer_flows/am-i-getting-minimum-wage/questions/how_much_were_you_paid_during_pay_period.govspeak.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :hint do %>
-  Don’t include payments for overtime or anything extra to your pay, eg money for clothes or goods.
+If you have not been reimbursed for something you bought for work (for example tools or a uniform) then you need to deduct the cost from amount you were paid. Do not include payments for overtime.
 <% end %>
 
 <% content_for :suffix_label do %>
