Adding more detail about marriage in Qatar

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/qatar/third_country/partner_british/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/qatar/third_country/partner_british/_opposite_sex.erb
@@ -1,53 +1,39 @@
-
 Contact the relevant local authorities in Qatar to find out about local marriage laws, including what documents you’ll need.
 
 ^There are no civil marriages in Qatar, but you can get married through a religious ceremony at a church or Sharia court.^
 
 You may be able to get married at the British Embassy if you’re both resident in Qatar and can prove that there are no other suitable facilities to get married locally.
 
-Contact the British Embassy in Qatar for more information.
-
 ^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Qatar](/foreign-travel-advice/qatar) before making any plans.
 
 ##What you need to do
 
-You need to have been living in Qatar for 21 days.
+You’ll be asked to provide an affirmation or affidavit document to prove you’re allowed to marry. This is called a marital status document.
 
-You’ll be asked to provide an affirmation or affidavit document to prove you’re allowed to marry.
+[Make an appointment at the British embassy or consulate in Qatar](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-doha/marital-status-document/slot_picker) to get a marital status document. You’ll need:
 
-Make an appointment at the British embassy or consulate in Qatar to swear an affirmation or affidavit that you’re free to marry. You’ll need to bring your passport and pay a fee.
+- your passport
+- a copy of your partner’s passport
+- evidence if you’ve changed your name by deed poll
 
-$A
-British Embassy Doha, main contact
-British Embassy,
-West Bay
-Dafna Area, Onaiza Zone 66, Al Shabab Street.
-PO Box 3 Doha
-Qatar
-$A
+If you have dual nationality and entered Qatar on your non-British passport, you’ll need to get your affirmation or affidavit from the embassy of that country.
 
-$C
-Telephone: +974 4496 2000  
-Fax: +974 4496 2086
+Your partner will also need to swear an affirmation or affidavit if they’re British. If they’re not, they might need an equivalent document from their embassy.
 
+If you’ve been married or in a civil partnership before, you’ll also need:
 
+- your original [decree absolute or final order](/copy-decree-absolute-final-order) (this could be a PDF and covering email from the court) - if you’re divorced
+- your annulment certificate - if your marriage or civil partnership was annulled
+- your civil partnership dissolution - if your civil partnership was dissolved
+- your partner’s [death certificate](/order-copy-birth-death-marriage-certificate) and marriage certificate - if you’ve been widowed
 
-[British Embassy Doha, main contact - opening hours](https://www.gov.uk/world/organisations/british-embassy-doha/office/british-embassy-doha-main-contact)
-$C
+^If your divorce, civil partnership dissolution or annulment took place outside the UK, you’ll need evidence that you or your ex partner lived in or were a national of that country at the time of the divorce.^
+
+If your documents aren’t in English, you’ll need to bring [certified translations](/government/collections/lists-of-translators-and-interpreters) as well as the originals.
 
 ###Legalisation and translation
 
 You’ll need to get your affirmation or affidavit [translated](/government/collections/lists-of-translators-and-interpreters) into the local language and ‘[legalised](/get-document-legalised)’ (certified as genuine) by the local authorities - the embassy or consulate should be able to give you advice.
-
-If you’ve been divorced or widowed, you’ll also need:
-
-- a [decree absolute or final order](/copy-decree-absolute-final-order) or the [death certificate](/order-copy-birth-death-marriage-certificate/)
-
-- evidence of nationality or residence where your divorce took place if it was outside the UK. You’ll need to get it [translated](/government/collections/lists-of-translators-and-interpreters) if it’s not in English.
-
-You’ll also need to provide evidence if you’ve changed your name by deed poll.
-
-^Your partner will probably need to get an affirmation or affidavit as well.^
 
 ## Fees
 
@@ -59,6 +45,4 @@ You’ll also need to provide evidence if you’ve changed your name by deed pol
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Qatar](/government/publications/qatar-consular-fees).
 
 <%= render partial: 'how_to_pay.govspeak.erb', locals: {calculator: calculator} %>
-
-
 
