Generate flattened outcome files for Spain marriage abroad

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/ceremony_country/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/ceremony_country/_opposite_sex.govspeak.erb
@@ -36,13 +36,13 @@ Send the form and documents by courier to the address in the application pack.
 
 The consulate will display your notice of marriage for 7 days. If nobody raises an objection, they'll issue your CNI and send it to you with your original documents by courier. You'll usually get your CNI 30 working days after the consulate receives your form and documents.
 
-It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the CNI. You'll need to pay in the [local currency](/government/publications/spain-consular-fees) by card. Fill in the payment form in the pack.
+It costs £50 to give notice and £50 for the CNI. You'll need to pay in the [local currency](/government/publications/spain-consular-fees) by card. Fill in the payment form in the pack.
 
 ^Your CNI will be valid for 6 months.^
 
 ### Get a marital status certificate ('certificado de estado civil/soltería')
 
-Download and fill in the [marital status certificate application pack](/government/publications/marital-status-certificate-for-marriage-application-pack) - it contains a list of the documents you'll need. The certificate costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %>. You'll need to pay in the [local currency](/government/publications/spain-consular-fees) by card. Fill in the payment form in the back. 
+Download and fill in the [marital status certificate application pack](/government/publications/marital-status-certificate-for-marriage-application-pack) - it contains a list of the documents you'll need. The certificate costs £50. You'll need to pay in the [local currency](/government/publications/spain-consular-fees) by card. Fill in the payment form in the back. 
 
 You must sign the affirmation in the application pack in front of a local [notary public](http://www.notaries-directory.eu/) in Spain. They'll charge you a fee.
 
