--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/ceremony_country/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/ceremony_country/_same_sex.govspeak.erb
@@ -36,7 +36,7 @@ Send the form and documents by courier to the address in the application pack.
 
 The consulate will display your notice of marriage for 7 days. If nobody raises an objection, they'll issue your CNI and send it to you with your original documents by courier. You'll usually get your CNI 30 working days after the consulate receives your form and documents.
 
-It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the CNI. You'll need to pay in the [local currency](/government/publications/spain-consular-fees) by card. Fill in the payment form in the pack.
+It costs £50 to give notice and £50 for the CNI. You'll need to pay in the [local currency](/government/publications/spain-consular-fees) by card. Fill in the payment form in the pack.
 
 ^Your CNI will be valid for 6 months.^
 
