--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/_same_sex.govspeak.erb
@@ -50,7 +50,7 @@ It costs £50 to exchange your CNI. You’ll need to pay in the [local currency]
 
 ### Get a marital status certificate ('certificado de estado civil/soltería')
 
-Download and fill in the [marital status certificate application pack](/government/publications/marital-status-certificate-for-marriage-application-pack) - it contains a list of the documents you'll need. The certificate costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %>.
+Download and fill in the [marital status certificate application pack](/government/publications/marital-status-certificate-for-marriage-application-pack) - it contains a list of the documents you'll need. The certificate costs £50.
 
 You must sign the affirmation in the application pack in front of a local [notary public](http://www.notaries-directory.eu/) in Spain. They'll charge you a fee.
 
